[gd_scene load_steps=16 format=3 uid="uid://v7wgn4m7a0er"]

[ext_resource type="Script" path="res://scences/ui/menus/main_menu.gd" id="1_oaw6j"]
[ext_resource type="Texture2D" uid="uid://con6y7mc74c5a" path="res://assets/characters/tile_0120.png" id="2_4gpks"]
[ext_resource type="StyleBox" uid="uid://r3x12h2yjbk0" path="res://assets/styleboxes/hover_stylebox.tres" id="2_piykt"]
[ext_resource type="StyleBox" uid="uid://ck3105wj7dcrn" path="res://assets/styleboxes/default_stylebox.tres" id="3_kva0j"]
[ext_resource type="Texture2D" uid="uid://dwwohw571cr2a" path="res://assets/objects/chest_mimic.png" id="3_lae7v"]
[ext_resource type="Texture2D" uid="uid://chtnrxmaowwkd" path="res://assets/characters/tile_0111.png" id="4_xsa1l"]
[ext_resource type="Texture2D" uid="uid://1u3b3hwqd8yh" path="res://assets/characters/tile_0110.png" id="6_nmdkm"]
[ext_resource type="PackedScene" uid="uid://bwuexw3t61b0h" path="res://scences/ui/settings/settings_bar.tscn" id="7_jvmsa"]
[ext_resource type="Texture2D" uid="uid://ukld5o613i0a" path="res://assets/characters/tile_0122.png" id="8_wid7a"]

[sub_resource type="Gradient" id="Gradient_mtqjb"]
colors = PackedColorArray(0.2, 0.117647, 0.0509804, 1, 0.054902, 0, 0.0588235, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tstuo"]
gradient = SubResource("Gradient_mtqjb")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_aj7pw"]
font_size = 42
shadow_size = 4
shadow_color = Color(0.772549, 0.454902, 0.72549, 0.509804)

[sub_resource type="Animation" id="Animation_u5hhp"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenceTransition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenceTransition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mcieo"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScenceTransition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScenceTransition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_km6g1"]
_data = {
"fade_in": SubResource("Animation_u5hhp"),
"fade_out": SubResource("Animation_mcieo")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oaw6j")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_tstuo")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.0
offset_top = 24.0
offset_right = 220.0
offset_bottom = 73.0
grow_horizontal = 2
text = "System Mycosis"
label_settings = SubResource("LabelSettings_aj7pw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -12.0
offset_right = 30.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ContinueButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = ExtResource("2_piykt")
theme_override_styles/normal = ExtResource("3_kva0j")
text = "Continue"

[node name="NewRunButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = ExtResource("2_piykt")
theme_override_styles/normal = ExtResource("3_kva0j")
text = "New run"

[node name="ExitButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = ExtResource("2_piykt")
theme_override_styles/normal = ExtResource("3_kva0j")
text = "Exit
"

[node name="SettingsBar" parent="." instance=ExtResource("7_jvmsa")]
layout_mode = 0
metadata/_edit_lock_ = true

[node name="Creatures" type="Control" parent="."]
anchors_preset = 0

[node name="Bat2" type="TextureRect" parent="Creatures"]
layout_mode = 0
offset_left = 55.0
offset_top = 164.0
offset_right = 87.0
offset_bottom = 196.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_4gpks")
expand_mode = 1
stretch_mode = 5

[node name="Mimic" type="TextureRect" parent="Creatures"]
layout_mode = 0
offset_left = 31.0
offset_top = 245.0
offset_right = 63.0
offset_bottom = 277.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_lae7v")
expand_mode = 1
stretch_mode = 5

[node name="Necromancer" type="TextureRect" parent="Creatures"]
layout_mode = 0
offset_left = 123.0
offset_top = 243.0
offset_right = 155.0
offset_bottom = 275.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_xsa1l")
expand_mode = 1
stretch_mode = 5

[node name="Bat" type="TextureRect" parent="Creatures"]
layout_mode = 0
offset_left = 508.0
offset_top = 171.0
offset_right = 540.0
offset_bottom = 203.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_4gpks")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="Ghost" type="TextureRect" parent="Creatures"]
layout_mode = 0
offset_left = 429.0
offset_top = 245.0
offset_right = 461.0
offset_bottom = 277.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("8_wid7a")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="Crab" type="TextureRect" parent="Creatures"]
layout_mode = 0
offset_left = 527.0
offset_top = 250.0
offset_right = 559.0
offset_bottom = 282.0
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_nmdkm")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="ScenceTransition" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_km6g1")
}

[node name="ColorRect" type="ColorRect" parent="ScenceTransition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.117647, 0.0509804, 1)

[connection signal="pressed" from="Buttons/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Buttons/NewRunButton" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="ScenceTransition" to="." method="_on_scence_transition_animation_finished"]
